--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "harcorp",
   "private": true,
   "scripts": {
-    "build": "nuxt generate",
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
